Alarm now annunciates when app is closed and screen is locked

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="main_resettimer">Reset</string>
     <string name="main_hourlabel">h</string>
     <string name="main_minutelabel">m</string>
+    <string name="main_secondlabel">s</string>
 </resources>
